projects: add resource
Creates a project resource, with CRUD operations and permissions to access this resource and links projects to documents.

* Creates the files for handling `project` resource.
* Configures REST endpoint for `project` resource.
* Adds permissions for projects when logged user is serialized.
* Compiles JSON schema for `project` resource in bootstrap's script.
* Adds a common schema for `identifiedby` field.
* Fixes values for type and fields ordering for contributor identifier in documents.
* Adds a `projects` property to document's JSON schema.
* Adds a `projects` property to document's elasticsearch mapping.
* Serializes `projects` property in marshmallow schema.
* Adds `autocomplete_name` property to project's elasticsearch mapping, to be able to search projects in typehead.
* Adds a method in documents API, to get documents linked to a given project.
* Serializes `documents` in project marshmallow schema and formats data before dumping JSON.
* Calls `replace_refs` method to get projects information in document detail view.
* Displays projects associated to document in document's detail view.
* Adds a view to display project details.
* Adds a filter for formatting a date in jinja templates.
* Fixes an error with `identifiedBy` field, when the model is not available.
* Adds projects to documents when it is created from a deposit.
* Adds `projects` property to deposit JSON schema.
* Adds `projects` property to deposit marshmallow schema.
* Creates a class for handling controlled affiliations.
* Guesses controlled affiliation when a document or a project is created or updated.
* Closes #358.
* Closes #362.

Co-Authored-by: Sébastien Délèze <sebastien.deleze@rero.ch>

--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,7 @@ target/
 # Generated JSON schemas
 sonar/modules/documents/jsonschemas/documents/document-v1.0.0.json
 sonar/modules/deposits/jsonschemas/deposits/deposit-v1.0.0.json
+sonar/modules/projects/jsonschemas/projects/project-v1.0.0.json
 
 # Generated JSON files
 data/backups/
