--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -14,6 +14,7 @@
 
 exclude sonar/modules/documents/jsonschemas/documents/document-v1.0.0.json
 exclude sonar/modules/deposits/jsonschemas/deposits/deposit-v1.0.0.json
+exclude sonar/modules/projects/jsonschemas/projects/project-v1.0.0.json
 
 include *.html
 include *.inv
