--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ cryptography = ">=3.2"
 netaddr = "*"
 dcxml = "*"
 lxml = ">=4.6.2"
+fuzzywuzzy = "^0.18.0"
+python-Levenshtein = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 Flask-Debugtoolbar = ">=0.10.1"
