--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ cryptography = ">=3.2"
 netaddr = "*"
 dcxml = "*"
 lxml = ">=4.6.2"
+webdavclient3 = "^3.14.5"
 
 [tool.poetry.dev-dependencies]
 Flask-Debugtoolbar = ">=0.10.1"
